# river-route-app

./: .gitignore  README.md  build_frontend.sh  index.html  package-lock.json  package.json  pyproject.toml  test.json  vite.config.js
river_route_app/: __init__.py  browser.py  config_schema.py  results.py  runner.py  server.py  ws.py
src/: app.jsx
src/components/: CodePreview.jsx  FileBrowser.jsx  HydrographChart.jsx  ProgressPanel.jsx  RouterForm.jsx  TopBar.jsx
src/hooks/: useWebSocket.js
src/pages/: ConfigPage.jsx  ResultsPage.jsx  RunPage.jsx  ValidationPage.jsx
src/style/: global.css
src/utils/: alignTimeSeries.js  colors.js  configSchema.js  configSchema.test.js  parseCSV.js  validationCsv.js  validationCsv.test.js  validationMetrics.js  validationMetrics.test.js
tests/: test_config_schema.py  test_runner_manager.py  test_runner_routing.py  test_server_cli.py  test_ws_paths.py  test_ws_validation.py
